etapa3/parser.output
Terminals unused in grammar

    TK_ERRO


Grammar

    0 $accept: programa $end

    1 programa: lista
    2         | %empty

    3 lista: elemento lista
    4      | elemento

    5 elemento: decl_global
    6         | funcao

    7 decl_global: tipo ls_var ';'

    8 ls_var: ls_var ',' TK_IDENTIFICADOR
    9       | TK_IDENTIFICADOR

   10 funcao: cabecalho corpo

   11 cabecalho: '(' parametros ')' TK_OC_GE tipo '!' TK_IDENTIFICADOR

   12 parametros: ls_parametros
   13           | %empty

   14 ls_parametros: ls_parametros ',' param
   15              | param

   16 param: tipo TK_IDENTIFICADOR

   17 tipo: TK_PR_INT
   18     | TK_PR_FLOAT
   19     | TK_PR_BOOL

   20 corpo: bloco

   21 bloco: '{' ls_comandos '}'

   22 ls_comandos: comando ';' ls_comandos
   23            | %empty

   24 comando: decl_local
   25        | atribuicao
   26        | chamada_func
   27        | retorno
   28        | controle_fluxo
   29        | bloco

   30 decl_local: tipo ls_var

   31 atribuicao: TK_IDENTIFICADOR '=' expr

   32 chamada_func: TK_IDENTIFICADOR '(' argumentos ')'

   33 argumentos: ls_argumentos
   34           | %empty

   35 ls_argumentos: arg ',' ls_argumentos
   36              | arg

   37 arg: expr

   38 retorno: TK_PR_RETURN expr

   39 controle_fluxo: while
   40               | if

   41 while: TK_PR_WHILE '(' expr ')' bloco

   42 if: TK_PR_IF '(' expr ')' bloco else

   43 else: TK_PR_ELSE bloco
   44     | %empty

   45 expr: expr or expr2
   46     | expr2

   47 expr2: expr2 and expr3
   48      | expr3

   49 expr3: expr3 igual expr4
   50      | expr4

   51 expr4: expr4 compara expr5
   52      | expr5

   53 expr5: expr5 addsub expr6
   54      | expr6

   55 expr6: expr6 muldiv expr7
   56      | expr7

   57 expr7: neg expr7
   58      | expr8

   59 expr8: '(' expr ')'
   60      | operando

   61 operando: TK_IDENTIFICADOR
   62         | literal
   63         | chamada_func

   64 literal: TK_LIT_INT
   65        | TK_LIT_FLOAT
   66        | TK_LIT_TRUE
   67        | TK_LIT_FALSE

   68 or: TK_OC_OR

   69 and: TK_OC_AND

   70 igual: TK_OC_EQ
   71      | TK_OC_NE

   72 compara: '<'
   73        | '>'
   74        | TK_OC_LE
   75        | TK_OC_GE

   76 addsub: '+'
   77       | '-'

   78 muldiv: '*'
   79       | '/'
   80       | '%'

   81 neg: '-'
   82    | '!'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 11 82
    '%' (37) 80
    '(' (40) 11 32 41 42 59
    ')' (41) 11 32 41 42 59
    '*' (42) 78
    '+' (43) 76
    ',' (44) 8 14 35
    '-' (45) 77 81
    '/' (47) 79
    ';' (59) 7 22
    '<' (60) 72
    '=' (61) 31
    '>' (62) 73
    '{' (123) 21
    '}' (125) 21
    error (256)
    TK_PR_INT (258) 17
    TK_PR_FLOAT (259) 18
    TK_PR_BOOL (260) 19
    TK_PR_IF (261) 42
    TK_PR_ELSE (262) 43
    TK_PR_WHILE (263) 41
    TK_PR_RETURN (264) 38
    TK_OC_LE (265) 74
    TK_OC_GE (266) 11 75
    TK_OC_EQ (267) 70
    TK_OC_NE (268) 71
    TK_OC_AND (269) 69
    TK_OC_OR (270) 68
    TK_IDENTIFICADOR <valor_lexico> (271) 8 9 11 16 31 32 61
    TK_LIT_INT <valor_lexico> (272) 64
    TK_LIT_FLOAT <valor_lexico> (273) 65
    TK_LIT_FALSE <valor_lexico> (274) 67
    TK_LIT_TRUE <valor_lexico> (275) 66
    TK_ERRO (276)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa <nodo_arvore> (38)
        on left: 1 2
        on right: 0
    lista <nodo_arvore> (39)
        on left: 3 4
        on right: 1 3
    elemento <nodo_arvore> (40)
        on left: 5 6
        on right: 3 4
    decl_global (41)
        on left: 7
        on right: 5
    ls_var (42)
        on left: 8 9
        on right: 7 8 30
    funcao <nodo_arvore> (43)
        on left: 10
        on right: 6
    cabecalho <nodo_arvore> (44)
        on left: 11
        on right: 10
    parametros (45)
        on left: 12 13
        on right: 11
    ls_parametros (46)
        on left: 14 15
        on right: 12 14
    param (47)
        on left: 16
        on right: 14 15
    tipo (48)
        on left: 17 18 19
        on right: 7 11 16 30
    corpo <nodo_arvore> (49)
        on left: 20
        on right: 10
    bloco <nodo_arvore> (50)
        on left: 21
        on right: 20 29 41 42 43
    ls_comandos <nodo_arvore> (51)
        on left: 22 23
        on right: 21 22
    comando <nodo_arvore> (52)
        on left: 24 25 26 27 28 29
        on right: 22
    decl_local (53)
        on left: 30
        on right: 24
    atribuicao <nodo_arvore> (54)
        on left: 31
        on right: 25
    chamada_func <nodo_arvore> (55)
        on left: 32
        on right: 26 63
    argumentos <nodo_arvore> (56)
        on left: 33 34
        on right: 32
    ls_argumentos <nodo_arvore> (57)
        on left: 35 36
        on right: 33 35
    arg <nodo_arvore> (58)
        on left: 37
        on right: 35 36
    retorno <nodo_arvore> (59)
        on left: 38
        on right: 27
    controle_fluxo <nodo_arvore> (60)
        on left: 39 40
        on right: 28
    while <nodo_arvore> (61)
        on left: 41
        on right: 39
    if <nodo_arvore> (62)
        on left: 42
        on right: 40
    else <nodo_arvore> (63)
        on left: 43 44
        on right: 42
    expr <nodo_arvore> (64)
        on left: 45 46
        on right: 31 37 38 41 42 45 59
    expr2 <nodo_arvore> (65)
        on left: 47 48
        on right: 45 46 47
    expr3 <nodo_arvore> (66)
        on left: 49 50
        on right: 47 48 49
    expr4 <nodo_arvore> (67)
        on left: 51 52
        on right: 49 50 51
    expr5 <nodo_arvore> (68)
        on left: 53 54
        on right: 51 52 53
    expr6 <nodo_arvore> (69)
        on left: 55 56
        on right: 53 54 55
    expr7 <nodo_arvore> (70)
        on left: 57 58
        on right: 55 56 57
    expr8 <nodo_arvore> (71)
        on left: 59 60
        on right: 58
    operando <nodo_arvore> (72)
        on left: 61 62 63
        on right: 60
    literal <nodo_arvore> (73)
        on left: 64 65 66 67
        on right: 62
    or <nodo_arvore> (74)
        on left: 68
        on right: 45
    and <nodo_arvore> (75)
        on left: 69
        on right: 47
    igual <nodo_arvore> (76)
        on left: 70 71
        on right: 49
    compara <nodo_arvore> (77)
        on left: 72 73 74 75
        on right: 51
    addsub <nodo_arvore> (78)
        on left: 76 77
        on right: 53
    muldiv <nodo_arvore> (79)
        on left: 78 79 80
        on right: 55
    neg <nodo_arvore> (80)
        on left: 81 82
        on right: 57


State 0

    0 $accept: . programa $end
    1 programa: . lista
    2         | . %empty  [$end]
    3 lista: . elemento lista
    4      | . elemento
    5 elemento: . decl_global
    6         | . funcao
    7 decl_global: . tipo ls_var ';'
   10 funcao: . cabecalho corpo
   11 cabecalho: . '(' parametros ')' TK_OC_GE tipo '!' TK_IDENTIFICADOR
   17 tipo: . TK_PR_INT
   18     | . TK_PR_FLOAT
   19     | . TK_PR_BOOL

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    '('          shift, and go to state 4

    $default  reduce using rule 2 (programa)

    programa     go to state 5
    lista        go to state 6
    elemento     go to state 7
    decl_global  go to state 8
    funcao       go to state 9
    cabecalho    go to state 10
    tipo         go to state 11


State 1

   17 tipo: TK_PR_INT .

    $default  reduce using rule 17 (tipo)


State 2

   18 tipo: TK_PR_FLOAT .

    $default  reduce using rule 18 (tipo)


State 3

   19 tipo: TK_PR_BOOL .

    $default  reduce using rule 19 (tipo)


State 4

   11 cabecalho: '(' . parametros ')' TK_OC_GE tipo '!' TK_IDENTIFICADOR
   12 parametros: . ls_parametros
   13           | . %empty  [')']
   14 ls_parametros: . ls_parametros ',' param
   15              | . param
   16 param: . tipo TK_IDENTIFICADOR
   17 tipo: . TK_PR_INT
   18     | . TK_PR_FLOAT
   19     | . TK_PR_BOOL

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3

    $default  reduce using rule 13 (parametros)

    parametros     go to state 12
    ls_parametros  go to state 13
    param          go to state 14
    tipo           go to state 15


State 5

    0 $accept: programa . $end

    $end  shift, and go to state 16


State 6

    1 programa: lista .

    $default  reduce using rule 1 (programa)


State 7

    3 lista: . elemento lista
    3      | elemento . lista
    4      | . elemento
    4      | elemento .  [$end]
    5 elemento: . decl_global
    6         | . funcao
    7 decl_global: . tipo ls_var ';'
   10 funcao: . cabecalho corpo
   11 cabecalho: . '(' parametros ')' TK_OC_GE tipo '!' TK_IDENTIFICADOR
   17 tipo: . TK_PR_INT
   18     | . TK_PR_FLOAT
   19     | . TK_PR_BOOL

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    '('          shift, and go to state 4

    $default  reduce using rule 4 (lista)

    lista        go to state 17
    elemento     go to state 7
    decl_global  go to state 8
    funcao       go to state 9
    cabecalho    go to state 10
    tipo         go to state 11


State 8

    5 elemento: decl_global .

    $default  reduce using rule 5 (elemento)


State 9

    6 elemento: funcao .

    $default  reduce using rule 6 (elemento)


State 10

   10 funcao: cabecalho . corpo
   20 corpo: . bloco
   21 bloco: . '{' ls_comandos '}'

    '{'  shift, and go to state 18

    corpo  go to state 19
    bloco  go to state 20


State 11

    7 decl_global: tipo . ls_var ';'
    8 ls_var: . ls_var ',' TK_IDENTIFICADOR
    9       | . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 21

    ls_var  go to state 22


State 12

   11 cabecalho: '(' parametros . ')' TK_OC_GE tipo '!' TK_IDENTIFICADOR

    ')'  shift, and go to state 23


State 13

   12 parametros: ls_parametros .  [')']
   14 ls_parametros: ls_parametros . ',' param

    ','  shift, and go to state 24

    $default  reduce using rule 12 (parametros)


State 14

   15 ls_parametros: param .

    $default  reduce using rule 15 (ls_parametros)


State 15

   16 param: tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 25


State 16

    0 $accept: programa $end .

    $default  accept


State 17

    3 lista: elemento lista .

    $default  reduce using rule 3 (lista)


State 18

   17 tipo: . TK_PR_INT
   18     | . TK_PR_FLOAT
   19     | . TK_PR_BOOL
   21 bloco: . '{' ls_comandos '}'
   21      | '{' . ls_comandos '}'
   22 ls_comandos: . comando ';' ls_comandos
   23            | . %empty  ['}']
   24 comando: . decl_local
   25        | . atribuicao
   26        | . chamada_func
   27        | . retorno
   28        | . controle_fluxo
   29        | . bloco
   30 decl_local: . tipo ls_var
   31 atribuicao: . TK_IDENTIFICADOR '=' expr
   32 chamada_func: . TK_IDENTIFICADOR '(' argumentos ')'
   38 retorno: . TK_PR_RETURN expr
   39 controle_fluxo: . while
   40               | . if
   41 while: . TK_PR_WHILE '(' expr ')' bloco
   42 if: . TK_PR_IF '(' expr ')' bloco else

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_IF          shift, and go to state 26
    TK_PR_WHILE       shift, and go to state 27
    TK_PR_RETURN      shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 29
    '{'               shift, and go to state 18

    $default  reduce using rule 23 (ls_comandos)

    tipo            go to state 30
    bloco           go to state 31
    ls_comandos     go to state 32
    comando         go to state 33
    decl_local      go to state 34
    atribuicao      go to state 35
    chamada_func    go to state 36
    retorno         go to state 37
    controle_fluxo  go to state 38
    while           go to state 39
    if              go to state 40


State 19

   10 funcao: cabecalho corpo .

    $default  reduce using rule 10 (funcao)


State 20

   20 corpo: bloco .

    $default  reduce using rule 20 (corpo)


State 21

    9 ls_var: TK_IDENTIFICADOR .

    $default  reduce using rule 9 (ls_var)


State 22

    7 decl_global: tipo ls_var . ';'
    8 ls_var: ls_var . ',' TK_IDENTIFICADOR

    ';'  shift, and go to state 41
    ','  shift, and go to state 42


State 23

   11 cabecalho: '(' parametros ')' . TK_OC_GE tipo '!' TK_IDENTIFICADOR

    TK_OC_GE  shift, and go to state 43


State 24

   14 ls_parametros: ls_parametros ',' . param
   16 param: . tipo TK_IDENTIFICADOR
   17 tipo: . TK_PR_INT
   18     | . TK_PR_FLOAT
   19     | . TK_PR_BOOL

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3

    param  go to state 44
    tipo   go to state 15


State 25

   16 param: tipo TK_IDENTIFICADOR .

    $default  reduce using rule 16 (param)


State 26

   42 if: TK_PR_IF . '(' expr ')' bloco else

    '('  shift, and go to state 45


State 27

   41 while: TK_PR_WHILE . '(' expr ')' bloco

    '('  shift, and go to state 46


State 28

   32 chamada_func: . TK_IDENTIFICADOR '(' argumentos ')'
   38 retorno: TK_PR_RETURN . expr
   45 expr: . expr or expr2
   46     | . expr2
   47 expr2: . expr2 and expr3
   48      | . expr3
   49 expr3: . expr3 igual expr4
   50      | . expr4
   51 expr4: . expr4 compara expr5
   52      | . expr5
   53 expr5: . expr5 addsub expr6
   54      | . expr6
   55 expr6: . expr6 muldiv expr7
   56      | . expr7
   57 expr7: . neg expr7
   58      | . expr8
   59 expr8: . '(' expr ')'
   60      | . operando
   61 operando: . TK_IDENTIFICADOR
   62         | . literal
   63         | . chamada_func
   64 literal: . TK_LIT_INT
   65        | . TK_LIT_FLOAT
   66        | . TK_LIT_TRUE
   67        | . TK_LIT_FALSE
   81 neg: . '-'
   82    | . '!'

    TK_IDENTIFICADOR  shift, and go to state 47
    TK_LIT_INT        shift, and go to state 48
    TK_LIT_FLOAT      shift, and go to state 49
    TK_LIT_FALSE      shift, and go to state 50
    TK_LIT_TRUE       shift, and go to state 51
    '('               shift, and go to state 52
    '!'               shift, and go to state 53
    '-'               shift, and go to state 54

    chamada_func  go to state 55
    expr          go to state 56
    expr2         go to state 57
    expr3         go to state 58
    expr4         go to state 59
    expr5         go to state 60
    expr6         go to state 61
    expr7         go to state 62
    expr8         go to state 63
    operando      go to state 64
    literal       go to state 65
    neg           go to state 66


State 29

   31 atribuicao: TK_IDENTIFICADOR . '=' expr
   32 chamada_func: TK_IDENTIFICADOR . '(' argumentos ')'

    '('  shift, and go to state 67
    '='  shift, and go to state 68


State 30

    8 ls_var: . ls_var ',' TK_IDENTIFICADOR
    9       | . TK_IDENTIFICADOR
   30 decl_local: tipo . ls_var

    TK_IDENTIFICADOR  shift, and go to state 21

    ls_var  go to state 69


State 31

   29 comando: bloco .

    $default  reduce using rule 29 (comando)


State 32

   21 bloco: '{' ls_comandos . '}'

    '}'  shift, and go to state 70


State 33

   22 ls_comandos: comando . ';' ls_comandos

    ';'  shift, and go to state 71


State 34

   24 comando: decl_local .

    $default  reduce using rule 24 (comando)


State 35

   25 comando: atribuicao .

    $default  reduce using rule 25 (comando)


State 36

   26 comando: chamada_func .

    $default  reduce using rule 26 (comando)


State 37

   27 comando: retorno .

    $default  reduce using rule 27 (comando)


State 38

   28 comando: controle_fluxo .

    $default  reduce using rule 28 (comando)


State 39

   39 controle_fluxo: while .

    $default  reduce using rule 39 (controle_fluxo)


State 40

   40 controle_fluxo: if .

    $default  reduce using rule 40 (controle_fluxo)


State 41

    7 decl_global: tipo ls_var ';' .

    $default  reduce using rule 7 (decl_global)


State 42

    8 ls_var: ls_var ',' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 72


State 43

   11 cabecalho: '(' parametros ')' TK_OC_GE . tipo '!' TK_IDENTIFICADOR
   17 tipo: . TK_PR_INT
   18     | . TK_PR_FLOAT
   19     | . TK_PR_BOOL

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3

    tipo  go to state 73


State 44

   14 ls_parametros: ls_parametros ',' param .

    $default  reduce using rule 14 (ls_parametros)


State 45

   32 chamada_func: . TK_IDENTIFICADOR '(' argumentos ')'
   42 if: TK_PR_IF '(' . expr ')' bloco else
   45 expr: . expr or expr2
   46     | . expr2
   47 expr2: . expr2 and expr3
   48      | . expr3
   49 expr3: . expr3 igual expr4
   50      | . expr4
   51 expr4: . expr4 compara expr5
   52      | . expr5
   53 expr5: . expr5 addsub expr6
   54      | . expr6
   55 expr6: . expr6 muldiv expr7
   56      | . expr7
   57 expr7: . neg expr7
   58      | . expr8
   59 expr8: . '(' expr ')'
   60      | . operando
   61 operando: . TK_IDENTIFICADOR
   62         | . literal
   63         | . chamada_func
   64 literal: . TK_LIT_INT
   65        | . TK_LIT_FLOAT
   66        | . TK_LIT_TRUE
   67        | . TK_LIT_FALSE
   81 neg: . '-'
   82    | . '!'

    TK_IDENTIFICADOR  shift, and go to state 47
    TK_LIT_INT        shift, and go to state 48
    TK_LIT_FLOAT      shift, and go to state 49
    TK_LIT_FALSE      shift, and go to state 50
    TK_LIT_TRUE       shift, and go to state 51
    '('               shift, and go to state 52
    '!'               shift, and go to state 53
    '-'               shift, and go to state 54

    chamada_func  go to state 55
    expr          go to state 74
    expr2         go to state 57
    expr3         go to state 58
    expr4         go to state 59
    expr5         go to state 60
    expr6         go to state 61
    expr7         go to state 62
    expr8         go to state 63
    operando      go to state 64
    literal       go to state 65
    neg           go to state 66


State 46

   32 chamada_func: . TK_IDENTIFICADOR '(' argumentos ')'
   41 while: TK_PR_WHILE '(' . expr ')' bloco
   45 expr: . expr or expr2
   46     | . expr2
   47 expr2: . expr2 and expr3
   48      | . expr3
   49 expr3: . expr3 igual expr4
   50      | . expr4
   51 expr4: . expr4 compara expr5
   52      | . expr5
   53 expr5: . expr5 addsub expr6
   54      | . expr6
   55 expr6: . expr6 muldiv expr7
   56      | . expr7
   57 expr7: . neg expr7
   58      | . expr8
   59 expr8: . '(' expr ')'
   60      | . operando
   61 operando: . TK_IDENTIFICADOR
   62         | . literal
   63         | . chamada_func
   64 literal: . TK_LIT_INT
   65        | . TK_LIT_FLOAT
   66        | . TK_LIT_TRUE
   67        | . TK_LIT_FALSE
   81 neg: . '-'
   82    | . '!'

    TK_IDENTIFICADOR  shift, and go to state 47
    TK_LIT_INT        shift, and go to state 48
    TK_LIT_FLOAT      shift, and go to state 49
    TK_LIT_FALSE      shift, and go to state 50
    TK_LIT_TRUE       shift, and go to state 51
    '('               shift, and go to state 52
    '!'               shift, and go to state 53
    '-'               shift, and go to state 54

    chamada_func  go to state 55
    expr          go to state 75
    expr2         go to state 57
    expr3         go to state 58
    expr4         go to state 59
    expr5         go to state 60
    expr6         go to state 61
    expr7         go to state 62
    expr8         go to state 63
    operando      go to state 64
    literal       go to state 65
    neg           go to state 66


State 47

   32 chamada_func: TK_IDENTIFICADOR . '(' argumentos ')'
   61 operando: TK_IDENTIFICADOR .  [TK_OC_LE, TK_OC_GE, TK_OC_EQ, TK_OC_NE, TK_OC_AND, TK_OC_OR, ';', ',', ')', '<', '>', '+', '-', '*', '/', '%']

    '('  shift, and go to state 67

    $default  reduce using rule 61 (operando)


State 48

   64 literal: TK_LIT_INT .

    $default  reduce using rule 64 (literal)


State 49

   65 literal: TK_LIT_FLOAT .

    $default  reduce using rule 65 (literal)


State 50

   67 literal: TK_LIT_FALSE .

    $default  reduce using rule 67 (literal)


State 51

   66 literal: TK_LIT_TRUE .

    $default  reduce using rule 66 (literal)


State 52

   32 chamada_func: . TK_IDENTIFICADOR '(' argumentos ')'
   45 expr: . expr or expr2
   46     | . expr2
   47 expr2: . expr2 and expr3
   48      | . expr3
   49 expr3: . expr3 igual expr4
   50      | . expr4
   51 expr4: . expr4 compara expr5
   52      | . expr5
   53 expr5: . expr5 addsub expr6
   54      | . expr6
   55 expr6: . expr6 muldiv expr7
   56      | . expr7
   57 expr7: . neg expr7
   58      | . expr8
   59 expr8: . '(' expr ')'
   59      | '(' . expr ')'
   60      | . operando
   61 operando: . TK_IDENTIFICADOR
   62         | . literal
   63         | . chamada_func
   64 literal: . TK_LIT_INT
   65        | . TK_LIT_FLOAT
   66        | . TK_LIT_TRUE
   67        | . TK_LIT_FALSE
   81 neg: . '-'
   82    | . '!'

    TK_IDENTIFICADOR  shift, and go to state 47
    TK_LIT_INT        shift, and go to state 48
    TK_LIT_FLOAT      shift, and go to state 49
    TK_LIT_FALSE      shift, and go to state 50
    TK_LIT_TRUE       shift, and go to state 51
    '('               shift, and go to state 52
    '!'               shift, and go to state 53
    '-'               shift, and go to state 54

    chamada_func  go to state 55
    expr          go to state 76
    expr2         go to state 57
    expr3         go to state 58
    expr4         go to state 59
    expr5         go to state 60
    expr6         go to state 61
    expr7         go to state 62
    expr8         go to state 63
    operando      go to state 64
    literal       go to state 65
    neg           go to state 66


State 53

   82 neg: '!' .

    $default  reduce using rule 82 (neg)


State 54

   81 neg: '-' .

    $default  reduce using rule 81 (neg)


State 55

   63 operando: chamada_func .

    $default  reduce using rule 63 (operando)


State 56

   38 retorno: TK_PR_RETURN expr .  [';']
   45 expr: expr . or expr2
   68 or: . TK_OC_OR

    TK_OC_OR  shift, and go to state 77

    $default  reduce using rule 38 (retorno)

    or  go to state 78


State 57

   46 expr: expr2 .  [TK_OC_OR, ';', ',', ')']
   47 expr2: expr2 . and expr3
   69 and: . TK_OC_AND

    TK_OC_AND  shift, and go to state 79

    $default  reduce using rule 46 (expr)

    and  go to state 80


State 58

   48 expr2: expr3 .  [TK_OC_AND, TK_OC_OR, ';', ',', ')']
   49 expr3: expr3 . igual expr4
   70 igual: . TK_OC_EQ
   71      | . TK_OC_NE

    TK_OC_EQ  shift, and go to state 81
    TK_OC_NE  shift, and go to state 82

    $default  reduce using rule 48 (expr2)

    igual  go to state 83


State 59

   50 expr3: expr4 .  [TK_OC_EQ, TK_OC_NE, TK_OC_AND, TK_OC_OR, ';', ',', ')']
   51 expr4: expr4 . compara expr5
   72 compara: . '<'
   73        | . '>'
   74        | . TK_OC_LE
   75        | . TK_OC_GE

    TK_OC_LE  shift, and go to state 84
    TK_OC_GE  shift, and go to state 85
    '<'       shift, and go to state 86
    '>'       shift, and go to state 87

    $default  reduce using rule 50 (expr3)

    compara  go to state 88


State 60
